--- a/index.htm
+++ b/index.htm
@@ -238,7 +238,7 @@
                             <div class="d-flex justify-content-center align-items-center vh-50">
                               <div class="text-center">
                                 <h1 class="dirnag">”</h1>
-                                <p class="slider-text1">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
+                                <p class="slider-text1">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. </p>
                                 <p class="slider-text2">JANE GALADRIEL</p>
                                 <p class="slider-text3 pb-5">CEO TENGKUREP</p>
                               </div>
@@ -248,7 +248,7 @@
                             <div class="d-flex justify-content-center align-items-center vh-50">
                                 <div class="text-center">
                                   <h1 class="dirnag">”</h1>
-                                  <p class="slider-text1">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
+                                  <p class="slider-text1">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
                                   <p class="slider-text2">JANE GALADRIEL</p>
                                   <p class="slider-text3 pb-5">CEO TENGKUREP</p>
                                 </div>
@@ -258,7 +258,7 @@
                             <div class="d-flex justify-content-center align-items-center vh-50">
                                 <div class="text-center">
                                   <h1 class="dirnag">”</h1>
-                                  <p class="slider-text1">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
+                                  <p class="slider-text1">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
                                   <p class="slider-text2">JANE GALADRIEL</p>
                                   <p class="slider-text3 pb-5">CEO TENGKUREP</p>
                                 </div>
@@ -268,7 +268,7 @@
                             <div class="d-flex justify-content-center align-items-center vh-50">
                                 <div class="text-center">
                                   <h1 class="dirnag">”</h1>
-                                  <p class="slider-text1">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
+                                  <p class="slider-text1">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
                                   <p class="slider-text2">JANE GALADRIEL</p>
                                   <p class="slider-text3 pb-5">CEO TENGKUREP</p>
                                 </div>
@@ -278,7 +278,7 @@
                             <div class="d-flex justify-content-center align-items-center vh-50">
                                 <div class="text-center">
                                   <h1 class="dirnag">”</h1>
-                                  <p class="slider-text1">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
+                                  <p class="slider-text1">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
                                   <p class="slider-text2">JANE GALADRIEL</p>
                                   <p class="slider-text3 pb-5">CEO TENGKUREP</p>
                                 </div>
